src/user.css
/* ... */
.TypeElement-type-ballad-textBase-useBrowserDefaultFocusStyle {
  font-weight: var(--normal-font-weight);
  font-family: var(--encore-title-font-stack), var(--fallback-fonts, sans-serif);
}

.TypeElement-type-ballad,
.encore-text-body-small-bold {
  font-weight: var(--bold-font-weight);
}

.Type__TypeElement-sc-goli-97j-0,
.TypeElement-type-mesto {
  color: var(--spice-text);
}

.main-entityHeader-topbarTitle {
  margin-left: var(--margin-md);
}

/* Scrollbar */
.os-theme-spotify.os-scrollbar {
  --os-size: 4px;
  --os-handle-bg: rgba(var(--spice-rgb-subtext), 0.3);
  --os-handle-bg-active: rgba(var(--spice-rgb-subtext), 0.3);
  --os-handle-bg-hover: rgba(var(--spice-rgb-subtext), 0.7);
  --os-handle-border-radius: 1rem;
}

.os-scrollbar {
  z-index: 2;
}

.os-scrollbar-track {
  padding-bottom: calc(var(--now-playing-bar-height) + var(--gap-md)) !important;
}

* {
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
  scrollbar-width: thin !important;
}

/* Button styles */
button,
.ap8U6ZVS8BqMxUdinBis
/* ADD: card close button */
,
.main-avatar-avatar,
.main-playPauseButton-button,
.main-skipForwardButton-button,
.main-skipBackButton-button,
.ButtonInner-small-iconOnly,
.ButtonInner-medium-iconOnly,
.ButtonInner-large-iconOnly,

.main-globalNav-historyButtons button,
.Button-textBase-medium-medium-buttonTertiary-condensedAll-useBrowserDefaultFocusStyle,
.Button-textBrightAccent-large-large-buttonTertiary-iconOnly-condensed-useBrowserDefaultFocusStyle,
.ButtonInner-medium,
.Button-small-buttonPrimary-useBrowserDefaultFocusStyle-data-is-icon-only,
.Button-small-small-buttonTertiary-iconOnly-useBrowserDefaultFocusStyle,
.Button-small-small-buttonTertiary-condensedAll-useBrowserDefaultFocusStyle,
.Root__globalNav .main-globalNav-link-icon,
.Button-small-buttonSecondary-useBrowserDefaultFocusStyle,
.LegacyChipComponent-checkbox-chip-sm-useBrowserDefaultFocusStyle,
.main-entityHeader-imageContainerClickable,
.ChipInnerComponent-sm,
.ChipInnerComponent-sm-selected,
.ChipInnerComponent-md,
.ChipInnerComponent-md-selected,
.ChipInnerComponent-lg,
.ChipInnerComponent-lg-selected,
.Button-small-buttonPrimary-useBrowserDefaultFocusStyle,
.Button-small-buttonSecondary-useBrowserDefaultFocusStyle:hover {
  text-wrap: nowrap;
  border-radius: var(--button-border-radius) !important;
  transition: 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.main-userWidget-box,
.main-avatar-avatar,
.main-globalNav-icon,
.main-globalNav-link-icon,
.Root__globalNav .main-globalNav-link-icon {
  background-color: var(--normal-button-color) !important;
  aspect-ratio: 1/1;
}

.main-userWidget-box:focus,
.main-userWidget-box:hover,
.main-userWidget-box[data-context-menu-open="true"],
.BoxComponent-group-card-naked-isInteractive-padding_12px:hover::after {
  background-color: var(--card-hover-color) !important;
}

.main-actionButtons {
  padding-inline: var(--gap-md) 0px !important;
}

.main-actionButtons button svg {
  transform: scale(1.25);
}

.main-actionButtons button,
.main-userWidget-boxCondensed,
.main-topBar-historyButtons .main-topBar-button {
  height: 3rem;
  width: 3rem;
  aspect-ratio: 1/1;
}

.main-avatar-avatar,
.main-userWidget-hasAvatar,
.main-avatar-avatar div,
.main-avatar-avatar img {
  min-height: 2rem !important;
  min-width: 2rem !important;
}

.main-nowPlayingView-aboutArtistV2Avatar,
.main-nowPlayingView-aboutArtistV2Avatar img,
.main-nowPlayingView-aboutArtistV2Avatar div {
  min-height: 8rem !important;
  min-width: 8rem !important;
}

.global-nav .main-actionButtons button,
.global-nav .main-globalNav-icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  border-radius: var(--button-border-radius);
  justify-content: center;
  -ms-flex-negative: 0;
  background-color: var(--normal-button-color);
  color: var(--text-subdued);
  flex-shrink: 0;
  min-width: var(--encore-control-size-base, 48px);
  min-block-size: var(--encore-control-size-base, 48px);
  padding-block-start: var(--encore-spacing-tighter, 12px);
  padding-block-end: var(--encore-spacing-tighter, 12px);
  padding-inline-start: var(--encore-spacing-tighter, 12px);
  padding-inline-end: var(--encore-spacing-tighter, 12px);
}

.main-entityHeader-imageContainerClickable:hover,
.Button-buttonPrimary-useBrowserDefaultFocusStyle-data-is-icon-only:hover .ButtonInner-sc-14ud5tc-0,
.Button-buttonPrimary-useBrowserDefaultFocusStyle-data-is-icon-only:hover .ButtonFocus-sc-2hq6ey-0,
.Button-small-small-buttonTertiary-iconOnly-useBrowserDefaultFocusStyle:hover,
.main-globalNav-historyButtons button:hover,
.main-topBar-historyButtons button,
.main-topBar-buddyFeed:hover,
.Button-textBase-medium-medium-buttonTertiary-condensedAll-useBrowserDefaultFocusStyle:hover,
.Button-small-small-buttonTertiary-condensedAll-useBrowserDefaultFocusStyle:hover,
.Button-medium-medium-buttonTertiary-iconOnly-useBrowserDefaultFocusStyle:hover,
.Button-medium-medium-buttonTertiary-iconOnly-condensedAll-useBrowserDefaultFocusStyle:hover {
  transition: scale 0.3s ease;
  transform: scale(var(--scale-down)) !important;
}

.main-genericButton-button {
  color: var(--spice-subtext);
}

/* Input & Search Bar */
input,
.x-searchInput-searchInputInput,
.main-globalNav-searchInputContainer {
  border-radius: var(--card-border-radius) !important;
  background-color: rgba(var(--spice-rgb-card), 0.25) !important;
  box-shadow: none !important;
}

.x-searchInput-searchInputInput:hover,
.main-globalNav-searchInputContainer input:hover {
  background-color: rgba(var(--spice-rgb-card), 0.5) !important;
}

.x-searchInput-searchInputInput:focus,
.main-globalNav-searchInputContainer input:focus {
  background-color: rgba(var(--spice-rgb-card), 0.75) !important;
  border-bottom: 2px solid rgb(var(--accent-color)) !important;
}
/* ... */

